Fix footer link by adding HTTPS to the salabs.me URL for improved security.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div id="footer">
         <p class="footer" style="color: gray;">
             <em>inspired from:
-            <a href="salabs.me" style="color: gray;">salabs.me</a></em>
+            <a href="https://salabs.me" style="color: gray;">salabs.me</a></em>
         </p>
       <br />
     </div>
