Update projects section in index.html: rename header to "Projects" and add new project entry for "Diabetic Peripheral Neuropathy Detection using HRV" with relevant details and links.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,16 @@
       </section>
 
       <section id="projects">
-        <h2>Personal Projects</h2>
+        <h2>Projects</h2>
         <ul>
+          <li>
+          <strong>
+            <a href="https://github.com/ad-aspera/hrv-processing-suite/blob/main/assets/research_report.pdf" target="_blank" rel="noopener">
+              Diabetic Peripheral Neuropathy Detection using HRV
+            </a>
+          </strong>
+          — Carried out under the supervision of <a href="https://profiles.imperial.ac.uk/r.kitney" target="_blank" rel="noopener">Prof. Richard Kitney, OBE</a> and <a href="https://www.researchgate.net/scientific-contributions/Matthieu-Bultelle-2098095946" target="_blank" rel="noopener">Dr. Matthieu Bultelle</a>.
+          </li>
           <li><strong><a href="https://github.com/atom-51/jespr" target="_blank" rel="noopener">JESPR</a></strong> — Developed a contrastive-learning based method to learn joint embeddings of protein sequences and structures (inspired from <a href="https://ai.meta.com/blog/yann-lecun-ai-model-i-jepa/">iJEPA</a>).</li>
           <li><strong><a href="https://abstracts.societyforscience.org/Home/FullAbstract?ISEFYears=2020%2C&Category=Any%20Category&AllAbstracts=True&FairCountry=Any%20Country&FairState=Any%20State&ProjectId=18977" target="_blank" rel="noopener">Cancer-eX</a></strong> — Studied salivary biomarkers for gastrointestinal cancers. Developed an ELISA assay and a <a href="https://github.com/harshagrawal13/archive-projects/blob/master/pan_can_risk_prediction_webapp/README.md" target="_blank" rel="noopener">risk-assessment tool</a> for early screening.</li>
           <li><strong><a href="https://github.com/harshagrawal13/Gawler-Unearthed">MineNow (Gawler Challenge)</a></strong> — Predicted new mineralized locations across Australia using geospatial data as part of the Gawler Unearthed hackathon.</li>
