Add headshot image to index.html, enhance preamble styling, and update .gitignore to include .DS_Store

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
   <body>
     <div id="preamble">
+      <img
+        src="assets/headshot.png"
+        alt="Harsh Agrawal headshot"
+        class="headshot"
+        width="160"
+        height="160"
+      />
       <h1 class="title">Harsh Agrawal</h1>
       <p class="contact">
         <a href="mailto:harshagrawal.1312@gmail.com" aria-label="Email Harsh">
